--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
   "name": "Smart Environment Monitor",
-  "short_name": "SmartEnv",
-  "start_url": "index.html",
+  "short_name": "EnvMonitor",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#e0f7ff",
-  "theme_color": "#007BFF",
+  "background_color": "#ffffff",
+  "theme_color": "#3db2ff",
   "icons": [
-    { "src": "assets/icon/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "assets/icon/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
